fixed device-width meta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Mozilla</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1274, user-scalable=no">
+  <meta name="viewport" content="width=device-width, user-scalable=yes">
   <link rel="stylesheet" href="themes/mozilla/styles/style.css">
   <style type="text/css">
 
